--- a/containers/docker/develop-alpine/Dockerfile
+++ b/containers/docker/develop-alpine/Dockerfile
@@ -3,10 +3,10 @@ FROM alpine:3.7
 RUN \
   apk add --update go git make gcc musl-dev linux-headers ca-certificates && \
   git clone --depth 1 https://github.com/truechain/ups && \
-  (cd truechain-engineering-code && make gups) && \
-  cp truechain-engineering-code/build/bin/gups /gups && \
+  (cd ups && make gups) && \
+  cp ups/build/bin/gups /gups && \
   apk del go git make gcc musl-dev linux-headers && \
-  rm -rf /truechain-engineering-code && rm -rf /var/cache/apk/*
+  rm -rf /ups && rm -rf /var/cache/apk/*
 
 EXPOSE 8545
 EXPOSE 30303
